Video #7.1 [29.10.25] - Nullable/Nonnull annotations